<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.x220.rslogger.selectActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/writeNew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/writeNew"
                    android:inputType="textPersonName"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button01"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/button01"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="89dp" />

                <Button
                    android:id="@+id/button02"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/button02"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="89dp" />

                <Button
                    android:id="@+id/button03"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/button03"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="89dp" />

                <Button
                    android:id="@+id/button04"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/button04"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="89dp" />

                <Button
                    android:id="@+id/button05"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/button05"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="89dp" />

                <Button
                    android:id="@+id/button06"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/button06"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="89dp" />

                <Button
                    android:id="@+id/button07"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/button07"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="89dp" />

                <Button
                    android:id="@+id/button08"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/button08"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="89dp" />

                <Button
                    android:id="@+id/button09"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/button09"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="89dp" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/button10"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="89dp" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/button11"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="89dp" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/button12"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="89dp" />

                <Button
                    android:id="@+id/button13"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/button13"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="89dp" />

                <Button
                    android:id="@+id/button14"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/button14"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="89dp" />

                <Button
                    android:id="@+id/button15"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/button15"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="29dp"
                    tools:layout_editor_absoluteY="89dp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>